--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div>
 		<img src="images/daun.jpg" alt="profile image">
-		<h2>Andi Ajsha</h2>
+		<h2 id="profile-name">Andi Ajsha</h2>
 	</div>
 </body>
 </html>
