--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div>
-		<img src="images/daun.jpg" alt="profile image">
+	<div id="profile-container">
+		<img id="profile-image" src="images/daun.jpg" alt="profile-image">
 		<h2 id="profile-name">Andi Ajsha</h2>
 	</div>
 </body>
