--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<div id="profile-container">
 		<img id="profile-image" src="images/daun.jpg" alt="profile-image">
 		<h2 id="profile-name">Andi Ajsha</h2>
+		<p id="profile-job">Software Engineer</p>
 	</div>
 </body>
 </html>
