changed style for selector body

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header id="heider">Heider</header>
 	<div id="profile-container">
 		<img id="profile-image" src="images/daun.jpg" alt="profile-image">
 		<h2 id="profile-name">Andi Ajsha</h2>
 		<p id="profile-job">Software Engineer</p>
 	</div>
+	<font id="footer">Footer</font>
 </body>
 </html>
