changed style for selector body

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<h2 id="profile-name">Andi Ajsha</h2>
 		<p id="profile-job">Software Engineer</p>
 	</div>
-	<font id="footer">Footer</font>
+	<footer id="footer">Footer</footer>
 </body>
 </html>
